# hflav-python-library

./: .env  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  HFLAV.json  HFLAV.schema  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sonar-project.properties
docs/: CODE_ANALYSIS.md  Class_Diagram_drawio  DEVELOPMENT.md  TESTING.md
hflav_fair_client/: __init__.py  cache.py  container.py
hflav_zenodo/: container.py  main.py
hflav_zenodo/averages/: averages.py
hflav_zenodo/conversors/: conversor_interface.py  dynamic_conversor.py  gitlab_schema_handler.py  template_schema_handler.py  zenodo_schema_handler.py
hflav_zenodo/exceptions/: source_exceptions.py
hflav_zenodo/filters/: base_query.py  search_filters.py  zenodo_query.py
hflav_zenodo/models/: hflav_data_searching.py  models.py
hflav_zenodo/processing/: data_visualizer.py
hflav_zenodo/services/: search_and_load_data_file_command.py  service.py  service_interface.py  services.py
hflav_zenodo/source/: source_gitlab_client.py  source_gitlab_interface.py  source_interface.py  source_zenodo_requests.py
tests/: integration.py  test_conversor.py  test_integration.py  test_performance.py  test_source.py
tests/conversors/: test_handler.py
tests/filters/: test_filters.py
tests/processing/: test_visualizer.py
tests/services/: test_command.py  test_service.py
tests/source/: test_source_gitlab.py
